# dingo

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: cli.rs  io.rs  main.rs  message.rs
