[package]
name = "dingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
bitvec = { version = "1.0.0"}
anyhow = { version = "1.0.56"}
rand = { version = "0.8.5"}
nom = { version = "7.1.0"}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"